improve unit tests (#7)
* improve unit tests

* fix Makefile
