# server/main.go
@@ -4,6 +4,15 @@ import (
 	"github.com/trustwallet/redemption/server/cmd"
 )
 
+// @title TrustWallet Redeem API
+// @version 1.0
+// @description Redemption API for Trust Wallet
+
+// @contact.name Trust Wallet
+// @contact.url https://t.me/wallecore
+
+// @license.name MIT License
+// @license.url https://raw.githubusercontent.com/trustwallet/redemption/master/LICENSE
 func main() {
 	cmd.Execute()
 }
